get price of product from price list management service and added kubernetes deployment files